--- a/server-client-playground/server/Gemfile
+++ b/server-client-playground/server/Gemfile
@@ -12,7 +12,7 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
-gem 'jwt'
+gem 'jwt', '1.1', git: 'git@github.com:progrium/ruby-jwt.git'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
