init config with webpack

--- a/angular2/tsconfig.json
+++ b/angular2/tsconfig.json
@@ -1,15 +1,22 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "module": "system",
-    "moduleResolution": "node",
+    "module": "commonjs",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "noEmitHelpers": false,
     "removeComments": false,
     "noImplicitAny": false
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "filesGlob": [
+    "./app/**/*.ts",
+    "./test/**/*.ts",
+    "!./node_modules/**/*.ts"
+  ],
+  "compileOnSave": false,
+  "buildOnSave": false
 }
