--- a/angular2/package.json
+++ b/angular2/package.json
@@ -5,7 +5,8 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "watch": "webpack --watch",
+    "start": "concurrent \"npm run watch\" \"npm run lite\" "
   },
   "license": "ISC",
   "dependencies": {
@@ -20,6 +21,8 @@
   "devDependencies": {
     "concurrently": "^1.0.0",
     "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "ts-loader": "^0.7.2",
+    "typescript": "^1.7.3",
+    "webpack": "^1.12.9"
   }
 }
